# ChangeLog for net-im/gossip
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/ChangeLog,v 1.85 2008/09/18 12:48:38 ranger Exp $

  18 Sep 2008; Brent Baude <ranger@gentoo.org> gossip-0.31.ebuild:
  Marking gossip-0.31 ppc64 for bug 236959

  13 Sep 2008; nixnut <nixnut@gentoo.org> gossip-0.31.ebuild:
  Stable on ppc wrt bug 236959

  12 Sep 2008; Raúl Porcel <armin76@gentoo.org> gossip-0.31.ebuild:
  sparc stable wrt #236959

  08 Sep 2008; Jeroen Roovers <jer@gentoo.org> gossip-0.31.ebuild:
  Stable for HPPA (bug #236959).

  07 Sep 2008; Markus Meier <maekke@gentoo.org> gossip-0.31.ebuild:
  amd64/x86 stable, bug #236959

  23 Aug 2008; Gilles Dartiguelongue <eva@gentoo.org>
  -files/gossip-0.28-lm-nodebug.patch, gossip-0.22.ebuild,
  -gossip-0.26.ebuild, -gossip-0.28.ebuild, -gossip-0.29.ebuild,
  -gossip-0.30.ebuild, gossip-0.31.ebuild:
  Change HOMEPAGE, bug #234398. Remove old revisions.

*gossip-0.31 (04 Aug 2008)

  04 Aug 2008; Gilles Dartiguelongue <eva@gentoo.org> +gossip-0.31.ebuild:
  bump to 0.31. bug fixes and translation updates. Closes bug #233874.

*gossip-0.30 (03 Aug 2008)

  03 Aug 2008; Gilles Dartiguelongue <eva@gentoo.org> +gossip-0.30.ebuild:
  bump to 0.30. Artificially raising loudmouth dependency for reasons
  explained in loudmouth bump.

  18 Jul 2008; Olivier Crête <tester@gentoo.org> gossip-0.29.ebuild:
  Remove useless autotools inherit

  18 Jul 2008; Jeroen Roovers <jer@gentoo.org> gossip-0.29.ebuild:
  Marked ~hppa too.

*gossip-0.29 (21 May 2008)

  21 May 2008; Gilles Dartiguelongue <eva@gentoo.org> +gossip-0.29.ebuild:
  bump to 0.29. Bug fixes, eds integration and use of loudmouth 1.3.4.

  21 Apr 2008; <welp@gentoo.org> metadata.xml:
  keyring to gnome-keyring in metadata.xml

  21 Apr 2008; <welp@gentoo.org> gossip-0.28.ebuild:
  keyring to gnome-keyring

  12 Jan 2008; Olivier Crête <tester@gentoo.org> gossip-0.22.ebuild,