@@ -1,6 +1,14 @@
-DIST gossip-0.22.tar.bz2 1295504 RMD160 36d050230a910ad41b8b949b1676266513442e3e SHA1 06f573f7a3347a17c42d96e21fa268b9a4949055 SHA256 ba118a93dfe4de03915dafb5c573846244674e78179b8f7fb05167cb5e119473
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST gossip-0.31.tar.bz2 1723001 RMD160 eea98a759354950e6f22cfbe0602317e138df8f7 SHA1 7362bf8ed4f8b2d2794c1448c25b06b55d058078 SHA256 ad2de7ab1700fe2368cc558137e4c17fd983a204894f2a911769709073e38510
-EBUILD gossip-0.22.ebuild 1208 RMD160 785adfe457720aedaeaf9cd552da50d560eb4e18 SHA1 be85eaf1d306d9032a16daafcac8dd95a601555b SHA256 3c5960eac13f8473e17997c392fc93a746f7008c7458999ac21a85626b67efa4
 EBUILD gossip-0.31.ebuild 1646 RMD160 166739eb18973a6c9c8cf4200acfe3ecd939cfc4 SHA1 1fb812aa24896e98a83d62825678bc5547d02087 SHA256 4b44e564d900657bc27b8ad85433bcbc25164098d79a088d8ec6debb2b7f73b3
-MISC ChangeLog 12173 RMD160 5654995bf7bde370ef6779443ae1510a13f6be8e SHA1 2b253c0a8b020aa87d6413e1c3f943c1308dfc0d SHA256 7c193393f3c855c73c297de5e3fdd471144189578fe233f14552771e11e9d172
+MISC ChangeLog 12271 RMD160 bfd4cfcac486a34bd0f71cfb8c6f6386e63c01b9 SHA1 19121eae5858c544ab12e5e147075c64fcaf1c47 SHA256 7b0f43d0e9d090a4b6fe5f1c75e150b4b90c89b4debc0979b34a60f2fdacdba2
 MISC metadata.xml 762 RMD160 1541d5373a6cc2b0f2155bcdaf166fedcec280a6 SHA1 4b273849fb94c3f4e35845c0862a893b9ecdd5fd SHA256 655b8744939244e07d851da0f6e813d3b6152af63d3e9893a7ba6092c7670543
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAko5fPgACgkQ1fmVwcYIWAY3OgCgrgLRVPVLNITS0Smqma+O6S9l
+YB0An1hXrYngqNpHk//+ruQtQaqv2+HR
+=n6jc
+-----END PGP SIGNATURE-----
