@@ -1,6 +1,9 @@
 # ChangeLog for net-im/gossip
-# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/ChangeLog,v 1.85 2008/09/18 12:48:38 ranger Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/ChangeLog,v 1.86 2009/06/17 21:32:01 eva Exp $
+
+  17 Jun 2009; Gilles Dartiguelongue <eva@gentoo.org> -gossip-0.22.ebuild:
+  Clean up old revision.
 
   18 Sep 2008; Brent Baude <ranger@gentoo.org> gossip-0.31.ebuild:
   Marking gossip-0.31 ppc64 for bug 236959
